--- a/Xcaret-Travel Guía/Travel Guía _ Consejos útiles para viajar.html
+++ b/Xcaret-Travel Guía/Travel Guía _ Consejos útiles para viajar.html
@@ -71,7 +71,7 @@
             width: 300px;
             height: 250px;
             background-color: white;
-            padding: left;
+            float: left;
         }	
 		
 			
@@ -679,10 +679,10 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1446806101390-3');
                     
                     
 
-</div>			<div style="text-align: center; margin: 10px 0; display: block; overflow: hidden;">
+</div>			<div style="text-align: center; margin: 20px 0; display:none; overflow: hidden;">
 	<script async="" src="./Travel Guía _ Consejos útiles para viajar_files/f(3).txt"></script>
 	<!-- TRV_links -->
-	<ins class="adsbygoogle" style="display: block; height: 190px;" data-ad-client="ca-pub-1879349339774425" data-ad-slot="2672797948" data-ad-format="link" data-adsbygoogle-status="done"><ins id="aswift_0_expand" style="display:inline-table;border:none;height:190px;margin:0;padding:0;position:relative;visibility:visible;width:300px;background-color:transparent;"><ins id="aswift_0_anchor" style="display:block;border:none;height:190px;margin:0;padding:0;position:relative;visibility:visible;width:300px;background-color:transparent;"><iframe width="300" height="190" frameborder="0" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no" allowfullscreen="true" onload="var i=this.id,s=window.google_iframe_oncopy,H=s&amp;&amp;s.handlers,h=H&amp;&amp;H[i],w=this.contentWindow,d;try{d=w.document}catch(e){}if(h&amp;&amp;d&amp;&amp;(!d.body||!d.body.firstChild)){if(h.call){setTimeout(h,0)}else if(h.match){try{h=s.upd(h,i)}catch(e){}w.location.replace(h)}}" id="aswift_0" name="aswift_0" style="left:0;position:absolute;top:0;width:300px;height:190px;" src="./Travel Guía _ Consejos útiles para viajar_files/saved_resource(2).html"></iframe></ins></ins></ins>
+	<ins class="adsbygoogle" style="display: none; height: 190px;" data-ad-client="ca-pub-1879349339774425" data-ad-slot="2672797948" data-ad-format="link" data-adsbygoogle-status="done"><ins id="aswift_0_expand" style="display:inline-table;border:none;height:190px;margin:0;padding:0;position:relative;visibility:visible;width:300px;background-color:transparent;"><ins id="aswift_0_anchor" style="display:block;border:none;height:190px;margin:0;padding:0;position:relative;visibility:visible;width:300px;background-color:transparent;"><iframe width="300" height="190" frameborder="0" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no" allowfullscreen="true" onload="var i=this.id,s=window.google_iframe_oncopy,H=s&amp;&amp;s.handlers,h=H&amp;&amp;H[i],w=this.contentWindow,d;try{d=w.document}catch(e){}if(h&amp;&amp;d&amp;&amp;(!d.body||!d.body.firstChild)){if(h.call){setTimeout(h,0)}else if(h.match){try{h=s.upd(h,i)}catch(e){}w.location.replace(h)}}" id="aswift_0" name="aswift_0" style="left:0;position:absolute;top:0;width:300px;height:190px;" src="./Travel Guía _ Consejos útiles para viajar_files/saved_resource(2).html"></iframe></ins></ins></ins>
 	<script>
 	(adsbygoogle = window.adsbygoogle || []).push({});
 	</script>
@@ -702,7 +702,7 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1446806101390-3');
 	<script type="text/javascript">
 	googletag.cmd.push(function() { googletag.display('div-gpt-ad-1446806101390-4'); });
 	</script>
-	<div id="google_ads_iframe_/13837015/TRV_desktop_side2_0__container__" style="border: 0pt none;"><iframe id="google_ads_iframe_/13837015/TRV_desktop_side2_0" title="3rd party ad content" name="google_ads_iframe_/13837015/TRV_desktop_side2_0" width="300" height="250" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border: 0px; vertical-align: bottom;" src="./Travel Guía _ Consejos útiles para viajar_files/saved_resource(3).html"></iframe></div></div>
+	<div id="google_ads_iframe_/13837015/TRV_desktop_side2_0__container__" style="border: 0pt none;"><iframe id="google_ads_iframe_/13837015/TRV_desktop_side2_0" title="3rd party ad content" name="google_ads_iframe_/13837015/TRV_desktop_side2_0" width="300" height="250" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border: 0px; vertical-align:baseline;" src="./Travel Guía _ Consejos útiles para viajar_files/saved_resource(3).html"></iframe></div></div>
 	</div>
 </div>
 
