--- a/excellence/fade.html
+++ b/excellence/fade.html
@@ -344,7 +344,7 @@
             <br/>  
             <span class="value_text_light value_text_small" style="color:black;">
                 <p style="margin-right:15px; text-align: justify; width: 90%; margin-top: 15px; line-height: 1.2em">
-    Think of it; there is always a <b>special occasion </b> to share <b>unforgettable moments</b> with the people you care the most
+    Think of it; there is always a <b>special occasion </b> to share <b>unforgettable moments</b> with the people you care the most.
 Whether it’s a major milestone or a personal achievement. From <b>significant birthdays</b> to solo-friends trip, you deserve to <b>celebrate in style!</b>
 
 
