--- a/Excellence/CubeB.html
+++ b/Excellence/CubeB.html
@@ -832,7 +832,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Forget the boring everyday routine. Turn an ordinary day into an Excellence Day.</div>
+<div id="i14">Live a unique vacation, live an Excellence Day, leave the ordinary days behind.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/qL7uQMS.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
@@ -852,7 +852,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i186.button.html:button/html-->
 <button id="i186">More info</button>
 <!--#/#--><!--#i5.i188.text.html:text/html-->
-<div id="i188">Forget the boring everyday routine. Turn an ordinary day into an Excellence Day.</div>
+<div id="i188">Once you step foot on Excellence Resorts, an ordinary day turns into an Excellence Day.</div>
 <!--#/#--><!--#i5.i190.image.html:image/html-->
 <img id="i190" src="https://i.imgur.com/AEpSopb.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
@@ -929,11 +929,7 @@ bmShow('i181');
 bmShow('i196');
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i4').addEventListener('click', function(e){
-    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i5.i192.image.js:image/base/js*/
 
 /*#/#*//*#i186.i187.positioning.js:positioning/base/js.2*/
@@ -951,11 +947,7 @@ document.getElementById('i95').addEventListener('click', function(e){
 });
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i5').addEventListener('click', function(e){
-    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i6.i194.image.js:image/base/js*/
 
 /*#/#*//*#i99.i179.actions.js:actions/base/js*/
@@ -973,11 +965,7 @@ bmShow('i198');
 bmShow('i202');
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i6').addEventListener('click', function(e){
-    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
