--- a/excellence/Cube.html
+++ b/excellence/Cube.html
@@ -688,11 +688,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i30 { background-color: #fafafa; opacity: 1;
 }
 /*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
-#i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+#i30 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -726,11 +726,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i216.text.css:text/base/css*/
 #i216 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i216.i217.positioning.css:positioning/base/css.1*/
-#i216 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 248px; height: 50px;
-        -ms-transform: translate(0, 0) translate(26px, 172px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(26px, 172px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(26px, 172px) rotate(0deg);
-        transform: translate(0, 0) translate(26px, 172px) rotate(0deg);
+#i216 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 254px; height: 50px;
+        -ms-transform: translate(0, 0) translate(21px, 174px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(21px, 174px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(21px, 174px) rotate(0deg);
+        transform: translate(0, 0) translate(21px, 174px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -834,7 +834,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i183.button.html:button/html-->
 <button id="i183">Celebrate now</button>
 <!--#/#--><!--#i4.i218.text.html:text/html-->
-<div id="i218">Remarkable Service & Facilities. Live for Yourself The Standard of Excellence Resorts.</div>
+<div id="i218">All Inclusive Luxury Resorts. The Standard of Excellence. Cancun, Punta Cana & Montego Bay</div>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -850,7 +850,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i197.image.html:image/html-->
 <img id="i197" src="https://i.imgur.com/AEpSopb.png"/>
 <!--#/#--><!--#i5.i216.text.html:text/html-->
-<div id="i216">Remarkable Service & Facilities. Live for Yourself The Standard of Excellence Resorts.</div>
+<div id="i216">Luxury & Service Everywhere and Anytime, That Is The Standard of Excellence Resorts.</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -999,7 +999,7 @@ customName: false;
 /*#/#*//*#i183.i184.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i218.text.meta:text/meta*/
-name: Remarkable Service & Facilities. Live for Yourself The Standard of Excellence Resorts.; customName: false;
+name: All Inclusive Luxury Resorts. The Standard of Excellence. Cancun, Punta Cana & Montego Bay; customName: false;
 /*#/#*//*#i218.i219.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
@@ -1028,7 +1028,7 @@ customName: false;
 /*#/#*//*#i197.i198.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i216.text.meta:text/meta*/
-name: Remarkable Service & Facilities. Live for Yourself The Standard of Excellence Resorts.; customName: false;
+name: Luxury & Service Everywhere and Anytime, That Is The Standard of Excellence Resorts.; customName: false;
 /*#/#*//*#i216.i217.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
