--- a/excellence/fade.html
+++ b/excellence/fade.html
@@ -329,13 +329,13 @@
     <div class="value_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
        
         <div class="value_cover bg cover-1 carousel-item item-1">
-            <div class="value_logo"><span class="value_text_bold value_text_small">Read more</span></div>
+            <div class="value_logo"><span class="value_text_bold value_text_small">Celebrate now</span></div>
         </div>
         <div class="value_cover bg cover-2 carousel-item item-2">
-            <div class="value_logo"><span class="value_text_bold value_text_small">Read more</span></div>
+            <div class="value_logo"><span class="value_text_bold value_text_small">Celebrate now</span></div>
         </div>
         <div class="value_cover bg cover-3 carousel-item item-3">
-            <div class="value_logo"><span class="value_text_bold value_text_small">Read more</span></div>
+            <div class="value_logo"><span class="value_text_bold value_text_small">Celebrate now</span></div>
         </div>
         <div class="value_text"> 
             <span class="value_text_title value_text_bold">
