--- a/Xcaret-Donde Ir/https___www.dondeir.com.html
+++ b/Xcaret-Donde Ir/https___www.dondeir.com.html
@@ -155,7 +155,7 @@ img.emoji {
   });
 </script>
 <!-- end tags publicidad google -->    <!-- Google Tag Manager -->
-    <script>
+   <!--  <script>
       dataLayer = [{
         'pageCategory': 'home',
             'author': 'Alejandro Alemán',
