--- a/Excellence/slider-extendido.html
+++ b/Excellence/slider-extendido.html
@@ -75,7 +75,7 @@
             width: 100px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 100px;
+            margin-left: 90px;
             background-color: #ad8b3a;
             font-family: 'Lato', sans-serif;
             padding: 5px;
@@ -267,10 +267,10 @@
                 <div class="te-images">
                     <img src="https://i.imgur.com/WWGOXyB.png" alt="" />
                     <img src="https://i.imgur.com/vYPujJR.png" alt="" />
-                    <img src="https://i.imgur.com/qL7uQMS.png" alt="" />
+                   
                 </div>
                 <div class="te-cover">
-                    <img src="https://i.imgur.com/qL7uQMS.png" alt="" />
+                    <img src="https://i.imgur.com/WWGOXyB.png" alt="" />
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
@@ -278,11 +278,11 @@
                 </div>
                 <div style="padding-left: 5px;padding-top:2px;padding-right:5px;">
                     <div class="bzm_text">
-                        <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:22px; text-align: center; margin-left:-9px; margin-right:10px;">
+                        <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:22px; text-align: center; margin-left:10px;">
 						When was the last time you pampered yourself?
 						</span> <br>
                         <span class="bzm_text_medium" style="color: black;line-height:1.2em; font-size:18px; width:95%; text-align:justify;">
-                        <p style="margin-top: 11px; line-height: 1.2em; margin-left: 3px; ">
+                        <p style="margin-top: 11px; line-height: 1.2em; margin-left: 5px; ">
                            It’s so simple to get caught in the day-to-day basis that it becomes easier to take the perfect/wrong excuse to avoid a self-pampering time until you notice the turned out and you desperately need a time out!
 <br> <br> <strong> Take it now!</strong>    </p>
                            
