--- a/Excellence/CubeB.html
+++ b/Excellence/CubeB.html
@@ -610,65 +610,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#i4.i20.shape.css:shape/base/css*/
-#i20 { background-color: #fafafa; opacity: 1;
-}
-/*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
-#i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
-/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 89px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 89px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 89px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 89px) rotate(0deg);
-}
-/*#/#*//*#i4.i130.image.css:image/base/css*/
-#i130 { opacity: 1; }
-/*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
-#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 308px; height: 308px;
-        -ms-transform: translate(0, 0) translate(-4px, -144px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(-4px, -144px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(-4px, -144px) rotate(0deg);
-        transform: translate(0, 0) translate(-4px, -144px) rotate(0deg);
-}
-/*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i91 { cursor: pointer; }
-/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
-#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i4.i181.image.css:image/base/css*/
-#i181 { opacity: 1; }
-/*#/#*//*#i181.i182.positioning.css:positioning/base/css.2*/
-#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 106px; height: 24px;
-        -ms-transform: translate(0, 0) translate(189px, 224px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(189px, 224px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(189px, 224px) rotate(0deg);
-        transform: translate(0, 0) translate(189px, 224px) rotate(0deg);
-}
-/*#/#*//*#i4.i196.button.css:button/base/css*/
-#i196 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(171,134,5,58); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: #ad8b3a; border-width: 1px; margin:-1px; border-style: solid; }
-#i196:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-#i196:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-/*#/#*//*#i196.i197.positioning.css:positioning/base/css.2*/
-#i196 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 93px; height: 30px;
-        -ms-transform: translate(0, 0) translate(96px, 149px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(96px, 149px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(96px, 149px) rotate(0deg);
-        transform: translate(0, 0) translate(96px, 149px) rotate(0deg);
-}
-/*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i4 { cursor: pointer; }
 /*#/#*//*#i5.i30.shape.css:shape/base/css*/
 #i30 { background-color: #fafafa; opacity: 1;
 }
@@ -689,7 +630,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(-4px, -144px) rotate(0deg);
 }
 /*#/#*//*#i5.i186.button.css:button/base/css*/
-#i186 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(171,134,5,58); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: #ad8b3a; border-width: 1px; margin:-1px; border-style: solid; }
+#i186 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(171,134,5,58); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: #ad8b3a; border-width: 1px; margin:-1px; border-style: solid; }
 #i186:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i186:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i186.i187.positioning.css:positioning/base/css.2*/
@@ -767,7 +708,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(-4px, -144px) rotate(0deg);
 }
 /*#/#*//*#i6.i198.button.css:button/base/css*/
-#i198 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(171,134,5,58); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: #ad8b3a; border-width: 1px; margin:-1px; border-style: solid; }
+#i198 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(171,134,5,58); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: #ad8b3a; border-width: 1px; margin:-1px; border-style: solid; }
 #i198:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i198:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i198.i199.positioning.css:positioning/base/css.2*/
@@ -816,9 +757,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
-/*#/#*//*#i4.i91.shape.css:shape/base/css*/
-#i91 { background-color: #dedede; opacity: 0.00;
-}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -827,23 +765,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.cube.html:cube/html.1-->
 <div style="overflow: visible" id="i2" class="shape-holder">
     <div style="visibility: hidden" id="content-container">
-        <!--#i2.i4.cube-panel.html:cube-panel/html-->
-<div id="i4" class="panel-content-holder">
-    <!--#i4.i20.shape.html:shape/html-->
-<div id="i20"></div>
-<!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Live a unique vacation, live an Excellence Day, leave the ordinary days behind.</div>
-<!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/qL7uQMS.png"/>
-<!--#/#--><!--#i4.i181.image.html:image/html-->
-<img id="i181" src="https://i.imgur.com/AEpSopb.png"/>
-<!--#/#--><!--#i4.i196.button.html:button/html-->
-<button id="i196">More info</button>
-<!--#/#--><!--#i4.i91.shape.html:shape/html-->
-<div id="i91"></div>
-<!--#/#-->
-</div>
-<!--#/#--><!--#i2.i5.cube-panel.html:cube-panel/html-->
+        <!--#i2.i5.cube-panel.html:cube-panel/html-->
 <div id="i5" class="panel-content-holder">
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
@@ -912,24 +834,6 @@ document.getElementById('i2').addEventListener('showPrevious', function(e){
 document.getElementById('i2').addEventListener('showNext', function(e){
     cube_i2.rotate(cube_i2.ROTATE_NEXT)
 });
-/*#/#*//*#i4.i130.image.js:image/base/js*/
-
-/*#/#*//*#i91.i177.actions.js:actions/base/js*/
-/* Name: On Click; */
-document.getElementById('i91').addEventListener('click', function(e){
-    /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.excellenceresorts.com'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-/*#/#*//*#i4.i181.image.js:image/base/js*/
-
-/*#/#*//*#i181.i182.positioning.js:positioning/base/js.2*/
-bmShow('i181');
-/*#/#*//*#i196.i197.positioning.js:positioning/base/js.2*/
-bmShow('i196');
-/*#/#*//*#i4.i50.actions.js:actions/base/js*/
-/* Name: On Click; */
-
 /*#/#*//*#i5.i192.image.js:image/base/js*/
 
 /*#/#*//*#i186.i187.positioning.js:positioning/base/js.2*/
@@ -991,35 +895,6 @@ family: Source Sans Pro;
 /*#/#*//*#i2.cube.meta:cube/meta.1*/
 name: Cube;
 customName: 1;
-/*#/#*//*#i2.i4.cube-panel.meta:cube-panel/meta*/
-    name: Cube Panel 1;
-/*#/#*//*#i4.i20.shape.meta:shape/meta*/
-name: Background;
-/*#/#*//*#i20.i21.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i4.i14.text.meta:text/meta*/
-name: Texto; customName: 1;
-/*#/#*//*#i14.i15.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i4.i130.image.meta:image/meta*/
-name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i181.image.meta:image/meta*/
-name: AEpSopb.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i181.i182.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i196.button.meta:button/meta*/
-name: More info;
-customName: false;
-/*#/#*//*#i196.i197.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i4.i91.shape.meta:shape/meta*/
-name: Link;
-/*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i5.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 2;
 /*#/#*//*#i5.i30.shape.meta:shape/meta*/
