--- a/Proyecto Look&Feel Enfemenino/fijo.html
+++ b/Proyecto Look&Feel Enfemenino/fijo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="ad.size" content="width=320, height=480" />
+    <meta name="ad.size" content="width=300, height=600" />
     <title>300-600 value</title>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700,900" rel="stylesheet">
@@ -146,7 +146,7 @@
         }
 
         .value_text_bold {
-            font-weight: 900;
+            font-weight: 800;
         }
 
         .value_text_small {
@@ -284,7 +284,7 @@
         </div>-->
         <div class="value_text"> 
             <span class="value_text_title value_text_bold">
-             ¡Haz de tu experiencia algo único con nuestros parques y Actividades Opcionales!
+             ¡Haz de tu experiencia algo único con nuestros parques y actividades opcionales!
             </span>
              
           <!--  <span class="value_text_light value_text_small" style="color:black;">
