correccion imagenes fijo

--- a/Proyecto Look&Feel Enfemenino/fijo.html
+++ b/Proyecto Look&Feel Enfemenino/fijo.html
@@ -65,19 +65,7 @@
         }
 
    
-        .value_cover .value_logo {
-            position: absolute;
-            bottom: -15px;
-            width:105px;
-            line-height: 1.3em;
-            z-index: 2;
-            margin-left: 40%;
-            left: -30px;
-            background-color: #008e00;
-            padding: 5px;
-            border-radius: 20px;
-            text-align: center;
-        }
+       
 
         .value_cover .value_logo span {
             color: white;
@@ -279,15 +267,14 @@
 
 <body class="value">
     <div class="value_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
-       
-       <!-- <div class="value_cover bg cover-1 carousel-item item-1">
-            <div class="value_logo"><span class="value_text_bold value_text_small">Read more</span></div>
+    <div class="value_cover bg cover-1 carousel-item item-1">
+            <div class="value_logo"><span class="value_text_bold value_text_small"></span></div>
         </div>
         <div class="value_cover bg cover-2 carousel-item item-2">
-            <div class="value_logo"><span class="value_text_bold value_text_small">Read more</span></div>
+            <div class="value_logo"><span class="value_text_bold value_text_small"></span></div>
         </div>
         <div class="value_cover bg cover-3 carousel-item item-3">
-            <div class="value_logo"><span class="value_text_bold value_text_small">Read more</span></div>
+            <div class="value_logo"><span class="value_text_bold value_text_small"></span></div>
         </div>-->
         <div class="value_text"> 
             <span class="value_text_title value_text_bold">
