--- a/Proyecto Look&Feel Enfemenino/fijo.html
+++ b/Proyecto Look&Feel Enfemenino/fijo.html
@@ -35,7 +35,7 @@
 
         .value_wrapper.size_300x233 {
             width: 300px;
-            height: 233px;
+            height: 250px;
         }
 
         .value_wrapper.size_320x480 {
@@ -60,7 +60,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/RrRRI8Y.png");
+            background: url("https://i.imgur.com/NiGjbzC.png");
             background-size: cover;
         }
 
@@ -111,9 +111,9 @@
 
         .value_text {
             position: absolute;
-            top: 54%;
+            top: 30%;
             left: 7.5px;
-            width: 97%;
+            width: 87%;
             padding: 0.3em;
             line-height: 1em;
             color: #453936;
@@ -275,7 +275,7 @@
         </div>
         <div class="value_cover bg cover-3 carousel-item item-3">
             <div class="value_logo"><span class="value_text_bold value_text_small"></span></div>
-        </div>-->
+        </div>
         <div class="value_text"> 
             <span class="value_text_title value_text_bold">
              ¡Haz de tu experiencia algo único con nuestros parques y actividades opcionales!
