--- a/Proyecto Look&Feel Enfemenino/fijo.html
+++ b/Proyecto Look&Feel Enfemenino/fijo.html
@@ -111,7 +111,7 @@
 
         .value_text {
             position: absolute;
-            top: 30%;
+            top: 55%;
             left: 7.5px;
             width: 87%;
             padding: 0.3em;
@@ -289,7 +289,7 @@
 
 
                 </p> 
-            </span> 
+            </span> </div>
             
               <div id="botones-para-compartir"style="display:inline;float:left;margin-top:-8px;margin-left:60px;padding-left: 30;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.xcaretexperiencias.com/tour-xcaret.php" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="38" src="https://i.imgur.com/aWe1A4G.png" title="compartir en facebook" width="38" /></a><a class="shared" href="http://pinterest.com/pin/create/button/?media=https://www.xcaretexperiencias.com/tour-xcaret.php" target="_blank"></a> <img alt="compartir en pinterest" class="pinteresti" height="38" src="https://i.imgur.com/4lJjwWQ.png" title="compartir en pinterest" width="38" /><a class="shared" href="https://twitter.com/home?status=https://www.xcaretexperiencias.com/tour-xcaret.php" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="38" src="https://i.imgur.com/ecFOGYd.png" title="compartir en twitter" width="38" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.xcaretexperiencias.com/tour-xcaret.php" target="_blank"> <img alt="compartir en google+" class="googlei" height="38" src="https://i.imgur.com/MRUYpOx.png" title="compartir en google+" width="38" /></a></div>
              
