--- a/Proyecto Look&Feel Enfemenino/fade.html
+++ b/Proyecto Look&Feel Enfemenino/fade.html
@@ -339,7 +339,7 @@
      
             </span> 
              <div id="logo">
-                <img src="https://i.imgur.com/et2gwXw.png" style="height:45px; margin-top: 50px; margin-left: 45px; margin-bottom: 10px;">
+                <img src="https://i.imgur.com/InJ9lTU.png" style="height:35px; margin-top: 50px; margin-left: 37px; margin-bottom: 10px;">
             </div>
             
              <div id="botones-para-compartir"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.xcaretexperiencias.com/tour-xcaret.php" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="38" src="https://i.imgur.com/aWe1A4G.png" title="compartir en facebook" width="38" /></a><a class="shared" href="http://pinterest.com/pin/create/button/?media=https://www.xcaretexperiencias.com/tour-xcaret.php" target="_blank"></a> <img alt="compartir en pinterest" class="pinteresti" height="38" src="https://i.imgur.com/4lJjwWQ.png" title="compartir en pinterest" width="38" /><a class="shared" href="https://twitter.com/home?status=https://www.xcaretexperiencias.com/tour-xcaret.php" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="38" src="https://i.imgur.com/ecFOGYd.png" title="compartir en twitter" width="38" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.xcaretexperiencias.com/tour-xcaret.php" target="_blank"> <img alt="compartir en google+" class="googlei" height="38" src="https://i.imgur.com/MRUYpOx.png" title="compartir en google+" width="38" /></a></div>
