--- a/RealMadrid/fadeEspa2.html
+++ b/RealMadrid/fadeEspa2.html
@@ -311,7 +311,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:16px;">Real Madrid Área VIP-Corporate Hospitality: Toda la emoción del mejor fútbol desde un entorno exclusivo </span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:18px;">Real Madrid Área VIP: <br> Toda la emoción del mejor fútbol desde un entorno exclusivo </span></div>
            
             
             <div style="bottom:0px;height: 18px;text-align:right;margin-top:1px;"> 
