--- a/Coppel/credito coppel/Cube.html
+++ b/Coppel/credito coppel/Cube.html
@@ -568,11 +568,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i192.image.css:image/base/css*/
 #i192 { opacity: 1; }
 /*#/#*//*#i192.i193.positioning.css:positioning/base/css.1*/
-#i192 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 200px;
-        -ms-transform: translate(0, 0) translate(0px, -18px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, -18px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, -18px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, -18px) rotate(0deg);
+#i192 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 170px;
+        -ms-transform: translate(0, 0) translate(0px, 2px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 2px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 2px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 2px) rotate(0deg);
 }
 /*#/#*//*#i5.i194.button.css:button/base/css*/
 #i194 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(63,76,143,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(63,76,143,1); border-radius: 20px; border-color: rgba(63,76,143,1); border-width: 1px; margin:-1px; border-style: solid; }
@@ -848,7 +848,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i192.image.html:image/html-->
-<img id="i192" src="https://i.imgur.com/HqyPAKW.jpg"/>
+<img id="i192" src="https://i.imgur.com/iAkxF9p.jpg"/>
 <!--#/#--><!--#i5.i194.button.html:button/html-->
 <button id="i194">¿Vamos?</button>
 <!--#/#--><!--#i5.i196.text.html:text/html-->
@@ -932,7 +932,6 @@ document.getElementById('i91').addEventListener('click', function(e){
 
 /*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
 
-/*#/#*//*#i5.i192.image.js:image/base/js*/
 
 /*#/#*//*#i194.i195.positioning.js:positioning/base/js.2*/
 bmShow('i194');
@@ -951,7 +950,7 @@ document.getElementById('i216').addEventListener('click', function(e){
 /* Name: On Click; */
 
 /*#/#*//*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-
+  
 /*#/#*//*#i6.i204.image.js:image/base/js*/
 
 /*#/#*//*#i204.i205.positioning.js:positioning/base/js.2*/
@@ -971,7 +970,7 @@ document.getElementById('i220').addEventListener('click', function(e){
 /* Name: On Click; */
 
 /*#/#*//*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-
+   
 /*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
