--- a/Coppel/credito coppel/Fadecredito.html
+++ b/Coppel/credito coppel/Fadecredito.html
@@ -114,7 +114,7 @@
         }
 
         .coppelfade2 .bg.cover-2 {
-            background-image: url(https://i.imgur.com/hSWs2Qe.jpg)
+            background-image: url(https://i.imgur.com/iAkxF9p.jpg)
         }
 
         .coppelfade2 .bg.cover-3 {
