--- a/Coppel/credito coppel/fade.html
+++ b/Coppel/credito coppel/fade.html
@@ -60,12 +60,12 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/LI7o8t3.jpg");
+            background: url("https://i.imgur.com/anTXRVt.jpg");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/anTXRVt.jpg");
+            background: url("https://i.imgur.com/ZTFfOpt.jpg");
             background-size: cover;
 
             
