--- a/A&E Pesadilla de un Padre/video.html
+++ b/A&E Pesadilla de un Padre/video.html
@@ -121,12 +121,12 @@
         }
 
         .tgx_text_title {
-            font-size: 130%;
+            font-size: 110%;
             color: #453936;
             display: inline-block;
             width: 110.5%;
-            margin-top: 10px;
-            margin-bottom: 11px;
+            margin-top: -8px;
+            margin-bottom: 8px;
             text-align: center;
             margin-left: -10px
         }
@@ -193,7 +193,7 @@
             z-index: 2;
             margin-left: 45%;
             left: -30px;
-            background-color: #317cf5;
+            background-color: #000;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
@@ -248,7 +248,7 @@
     </style>
     <script>
         function openUrl() {
-            window.open("http://bluetelecom.com.mx/digital/internet-inalambrico.php");
+            window.open("https://www.mylifetime.com/movies/a-fathers-nightmare");
         }
     </script>
 </head>
@@ -256,24 +256,24 @@
 <body class="tgx">
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta">
         <div class="carousel-container">
-            <iframe style="margin-left:-70px;" width="460" height="260"src="https://www.youtube.com/embed/Z7oyMy9ECHY?rel=0&autoplay=1&modestbranding=0&playlist=Z7oyMy9ECHY&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe style="margin-left:-70px;" width="460" height="260"src="https://youtu.be/AA2v83c-Nu4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div onclick="openUrl();">
         <div class="tgx_cover">
-            <div class="tgx_logo"><span class="tgx_text_bold" style="font-size:70%;"> ¡Conéctate ya!</span></div>
+            <div class="tgx_logo"><span class="tgx_text_bold" style="font-size:70%;"> ¿Estás seguro?</span></div>
         </div>
            
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-                Conéctate a Internet como te gusta: Simple
+                ¿Es esto la peor pesadilla para un padre?
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-top: -2px; font-size: 15px;"> Blue Telecomm Inalámbrico. Internet en 3 pasos: <strong>contrata, enchufa y conéctate.</strong>  </p> <p style="margin-top:10px; font-size: 15px;"><strong>Sin cables, ni instaladores</strong></p>
+                <p style="margin-top: -5px; font-size: 12px;"> Tras la muerte de su esposa, un padre envía a su hija a la universidad. Allí, la chica no tarda en caer bajo los encantos de su compañera de cuarto. Muy pronto, la manipulación de esta nueva amistad la alejará de su padre, que no descubrirá sus verdaderos motivos hasta que sea demasiado tarde.</p>
             </span>
 
             
                 <div class="logo">
-                    <img src="https://i.imgur.com/paFqWw8.png" style="height:25px">
+                    <img src="https://i.imgur.com/SXPK7f2.jpg" style="height:25px">
                 </div>
             </div>
         </div>
