--- a/A&E Pesadilla de un Padre/slider.html
+++ b/A&E Pesadilla de un Padre/slider.html
@@ -244,7 +244,7 @@
                
                 <div class="te-images"> 
                 <img src="https://i.imgur.com/hkOLeNf.jpg" alt="" />
-                <img src="https://i.imgur.com/stnQ8oh.jpg" alt="" /> 
+                <img src="https://i.imgur.com/M6Tw2OE.jpg" alt="" /> 
                 <img src="https://i.imgur.com/kqr00VY.jpg" alt="" /> </div>
                 
                 <div class="te-cover">
